antomain-helm/templates/user-service/us-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: Antomain
    service: user-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8082
      protocol: TCP
      name: http
  selector:
    app: Antomain
    service: user-service
