antomain-helm/templates/user-service/us-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: user-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - antomain-gateway
  http:
    - match:
        - uri:
            prefix: / #Default service
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 80
            host: user-service.default.svc.cluster.local
